--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	<div class="description">
 	  <div class="container">
-		<p>I'm a web developer, and former hardware engineer, based out of Seattle, WA. Currently I'm getting a jump start on Angular2, including a project I'm currently working on entirely written in Typescript, and making plenty of websites (like this one!) Much of my experience is from hardware validation and design, and embedded systems. When I'm not working, I'm a cyclist, a dog owner, and a photographer. I'm available for hire for any website or photography work. </p>
+		<p>I'm a web developer, and former hardware engineer, based out of Seattle, WA. Currently I'm getting a jump start on Angular2, including a project I'm currently working on entirely written in Typescript, and making plenty of websites (like this one!) Much of my experience is from hardware validation and design, and embedded systems. When I'm not working, I'm a cyclist, a dog owner, and a photographer. I'm available for hire for any website or photography work. HERPA DERP</p>
 	  </div>
 	</div>
 
