--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
 
 		<article id="experience">
 		<h2>Experience</h2>
+		<h3>Front End and Back End Software Engineer</h3>
+		<h4>Fabler.fm</h4>
+		<ul>
+			<li>Implemented OAuth2 login, token management, Facebook user registration, and standard user registration on both front end and back end.</li>
+			<li>Designed custom JS audio player into a pluggable Angular2 component, queueing files from a service.</li>
+			<li>Redesigned open source Django threaded commenting app into a Youtube style threaded commenting app with RESTful APIs.</li>
+		</ul>
+		
 		<h3>Freelance Web Developer</h3>
 		<h4>2014-present</h4>
 
