--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<article id="experience">
 		<h2>Experience</h2>
 		<h3>Front End and Back End Software Engineer</h3>
-		<h4>Fabler.fm</h4>
+		<h4>Fabler.fm 2015-present</h4>
 		<ul>
 			<li>Implemented OAuth2 login, token management, Facebook user registration, and standard user registration on both front end and back end.</li>
 			<li>Designed custom JS audio player into a pluggable Angular2 component, queueing files from a service.</li>
