--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 			<li title="Chip" class="chip">Chip</li>
 		  </ul>
 		</article>
-		<h1>Dustin Replogle is a web developer.</h1>
+		<h1>Dustin Replogle is a software engineer.</h1>
 	</section>
 
 	
 	
 	<div class="description">
 	  <div class="container">
-		<p>I'm a web developer, and former hardware engineer, based out of Seattle, WA. Currently I'm getting a jump start on Angular2, including a project I'm currently working on entirely written in Typescript, and making plenty of websites (like this one!) Much of my experience is from hardware validation and design, and embedded systems. When I'm not working, I'm a cyclist, a dog owner, and a photographer. I'm available for hire for any website or photography work. An example page of my latest project made with DRF and Angular2 can be found <a href="http://ec2-54-218-65-165.us-west-2.compute.amazonaws.com/#/episode/180">here</a>.</a></p>
+		<p>I'm a software engineer, and former hardware engineer, based out of Seattle, WA. Currently I'm getting a jump start on Angular2, including a project I'm currently working on entirely written in Typescript, and making plenty of websites (like this one!) Much of my experience is from hardware validation and design, and embedded systems. When I'm not working, I'm a cyclist, a dog owner, and a photographer. I'm available for hire for any website or photography work. An example page of my latest project made with DRF and Angular2 can be found <a href="http://ec2-54-218-65-165.us-west-2.compute.amazonaws.com/#/episode/180">here</a>.</a></p>
 	  </div>
 	</div>
 
