--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 		<article id="skills">
 		<a name="skills">
 		<h2>Skills</h2>
-		<h3>Backend Specialties</h3>
+		<h3>Web Backend Specialties</h3>
 		<ul>	
 			<li>Django</li>
 			<li>Django Rest Framework</li>
 			<li>PostgreSQL</li>
+			<li>ASP.NET</li>
 		</ul>
 
 		<h3>Frontend Specialties</h3>
@@ -58,6 +59,7 @@
 		<h3>Languages</h3>
 		<ul>
 			<li>Typescript</li>
+			<li>C#</li>
 			<li>Javascript EC5</li>
 			<li>Perl</li>
 			<li>Python</li>
