--- a/index.html
+++ b/index.html
@@ -72,12 +72,19 @@
 
 		<article id="experience">
 		<h2>Experience</h2>
-		<h3>Front End and Back End Software Engineer</h3>
+		<h3>Full Stack Software Engineer</h3>
 		<h4>Fabler.fm 2015-present</h4>
 		<ul>
 			<li>Implemented OAuth2 login, token management, Facebook user registration, and standard user registration on both front end and back end.</li>
 			<li>Designed custom JS audio player into a pluggable Angular2 component, queueing files from a service.</li>
 			<li>Redesigned open source Django threaded commenting app into a Youtube style threaded commenting app with RESTful APIs.</li>
+		</ul>
+		
+		<h3>Freelance Software Engineer</h3>
+		<h4>2014-present</h4>
+		<ul>
+			<li>Took on various jobs developing Django web applications. Collaborated with external designer to
+deliver upon customer expectations.</li>
 		</ul>
 		
 
