--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    
     <link rel="stylesheet" href="main.css" media="screen">
   </head>
-
-  <body data-0="background-position: 0px 0px;"
-        data-545="background-position: 0px -545px;">
-	
-	  <div class="nav">
+  <body>
+    <div class="nav">
         <ul>
           <li><a href="#Dustin">About</a></li>
           <li><a href="#experience">Experience</a></li>
@@ -54,26 +49,32 @@
 		<h3>Frontend Specialties</h3>
 		<ul>
 			<li>Angular2</li>
+			<li>React</li>
 		</ul>
 
 		<h3>Languages</h3>
 		<ul>
 			<li>Typescript</li>
-			<li>C#</li>
-			<li>Javascript EC5</li>
-			<li>Perl</li>
+			<li>Javascript EC6</li>
 			<li>Python</li>
+			<li>Perl</li>
 			<li>C/C++</li>
 			<li>SystemVerilog</li>
-			<li>VHDL</li>
 		</ul>
 
 		</article>
 
 		<article id="experience">
 		<h2>Experience</h2>
+		<h3>UI Developer</h3>
+		<h4>Hyundai Motor America</h4>
+		<ul>
+			<li>Developed and maintained responsive web pages for hyundaiusa.com</li>
+			<li>Worked with stakeholders from two different companies to create deliverables in short time frames</li>
+		</ul>
+					
 		<h3>Full Stack Software Engineer</h3>
-		<h4>Fabler.fm 2015-present</h4>
+		<h4>Fabler.fm 2015-2016</h4>
 		<ul>
 			<li>Implemented OAuth2 login, token management, Facebook user registration, and standard user registration on both front end and back end.</li>
 			<li>Designed custom JS audio player into a pluggable Angular2 component, queueing files from a service.</li>
